// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`runWebFeaturesCodemodsAnalysis > handles a file with multiple matches 1`] = `
[
  {
    "file": "index.js",
    "message": "Consider using the arrayAt feature here.",
    "range": {
      "end": {
        "column": 36,
        "line": 0,
      },
      "start": {
        "column": 13,
        "line": 0,
      },
    },
    "score": 0,
    "severity": "suggestion",
  },
  {
    "file": "index.js",
    "message": "Consider using the exponentiation feature here.",
    "range": {
      "end": {
        "column": 34,
        "line": 1,
      },
      "start": {
        "column": 16,
        "line": 1,
      },
    },
    "score": 0,
    "severity": "suggestion",
  },
]
`;

exports[`runWebFeaturesCodemodsAnalysis > handles a file with no matches 1`] = `[]`;

exports[`runWebFeaturesCodemodsAnalysis > handles a file with one match 1`] = `
[
  {
    "file": "index.js",
    "message": "Consider using the arrayAt feature here.",
    "range": {
      "end": {
        "column": 36,
        "line": 0,
      },
      "start": {
        "column": 13,
        "line": 0,
      },
    },
    "score": 0,
    "severity": "suggestion",
  },
]
`;

exports[`runWebFeaturesCodemodsAnalysis > handles multiple occurrences of the same match in one file 1`] = `
[
  {
    "file": "index.js",
    "message": "Consider using the arrayAt feature here.",
    "range": {
      "end": {
        "column": 40,
        "line": 0,
      },
      "start": {
        "column": 17,
        "line": 0,
      },
    },
    "score": 0,
    "severity": "suggestion",
  },
]
`;

exports[`runWebFeaturesCodemodsAnalysis > ignores a file path outside of the root 1`] = `[]`;

exports[`runWebFeaturesCodemodsAnalysis > respects the src option 1`] = `
[
  {
    "file": "src/index.js",
    "message": "Consider using the arrayAt feature here.",
    "range": {
      "end": {
        "column": 36,
        "line": 0,
      },
      "start": {
        "column": 13,
        "line": 0,
      },
    },
    "score": 0,
    "severity": "suggestion",
  },
]
`;
